# deck-rs

./: Cargo.toml  README.md  example.md
src/: app.rs  deck.rs  main.rs  md.rs  slide.rs  ui.rs
