[package]
name = "deck-rs"
version = "0.1.0"
authors = ["Udasi <udasitharani@gmail.com>"]
edition = "2021"
description = "Presentations in the terminal"
repository = "https://github.com/niftytyro/deck-rs"
license = "MIT OR Apache-2.0"
keywords = ["terminal", "tui", "markdown", "slides", "deck"]
categories = ["command-line-utilities", "command-line-interface", "template-engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23"
tui = "0.19.0"
comrak = "0.14.0"
argh = "0.1.8"
